--- a/allocation/package.json
+++ b/allocation/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@google/generative-ai": "^0.24.1",
+    "firebase": "^12.9.0",
     "lucide-react": "^0.344.0",
     "pdfjs-dist": "^4.0.379",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1"
@@ -23,6 +26,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.2"
+    "vite": "^7.3.1"
   }
 }
