--- a/allocation/dataconnect/example/connector.yaml
+++ b/allocation/dataconnect/example/connector.yaml
@@ -1,8 +1,1 @@
-connectorId: example
-generate:
-  javascriptSdk:
-    - outputDir: ..\..\src\dataconnect-generated
-      package: "@dataconnect/generated"
-      packageJsonDir: ..\..
-      react: true
-      angular: false
+connectorId: "example"
